add nav for test

--- a/Practice/Lession-1/index.html
+++ b/Practice/Lession-1/index.html
@@ -23,8 +23,9 @@
 </head>
 
 <body>
+    <!-- Header -->
     <header>
-        
+        <nav></nav>
     </header>
 
     <!-- Main Container -->
@@ -32,6 +33,7 @@
 
     </main>
 
+    <!-- Footer -->
     <footer>
 
     </footer>
