--- a/Practice/Lession-1/index.html
+++ b/Practice/Lession-1/index.html
@@ -25,7 +25,7 @@
 <body>
     <!-- Header -->
     <header>
-        <nav></nav>
+        <nav>HTML && CSS</nav>
     </header>
 
     <!-- Main Container -->
