update day 1 assignment

--- a/Practice/day-1/assignment1/index.html
+++ b/Practice/day-1/assignment1/index.html
@@ -30,13 +30,23 @@
 
     <!-- Main Container -->
     <main class="main grid">
-
+        <button onclick="clickMe()" class="btn">click me</button>
     </main>
 
     <!-- Footer -->
     <footer>
 
     </footer>
+
+    <!-- <script>
+            function clickMe() {
+        var username = prompt("Please enter your name !!");
+        var elm = document.querySelector(".btn");
+        elm.textContent = "hello " + username;
+        }
+    </script> -->
+
+    <script src="index.js"></script>
 
 </body>
 
