DOM exercise complete

--- a/Practice/Day7-DOMBasics/Project/3/index.html
+++ b/Practice/Day7-DOMBasics/Project/3/index.html
@@ -44,6 +44,14 @@
   ulEl2[0].children[ulEl2[0].children.length - 1].style.backgroundColor = 'pink';
   
   // Answer 4
+  ulEl2[0].children[1];
+
+  // Answer 5 
+  ulEl2[0].children[1].nextElementSibling.style.backgroundColor = "coral";
+
+  ulEl2[0].children[1].previousElementSibling.style.backgroundColor = "aquamarine";
+
+
   
 
   
