todo app complete

--- a/Practice/Day 8 - DOM Events/todos/index.html
+++ b/Practice/Day 8 - DOM Events/todos/index.html
@@ -17,8 +17,8 @@
   <body class="container text-center">
       <h1>todos</h1>
       <div class="content">
-        
-        <input class="mainInput" placeholder="What needs to be done?" type="text" name="" id="todo-text" />
+        <span class="checkAllParent"><input type="checkbox" name="checkAll" id="checkAll"></span>
+        <input id="todo-text" class="mainInput" placeholder="What needs to be done?" type="text" name=""  />
         <!-- <button class="button-primary add-todo">ADD</button> -->
         <div class="lists">
           <ul></ul>
@@ -32,7 +32,6 @@
             </span>
             <span class="clearAllList">Clear Completed</span>
           </div>
-        
       </div>
 
     <script src="main.js"></script>
