--- a/Practice/Day 13 - Memory Game/index.html
+++ b/Practice/Day 13 - Memory Game/index.html
@@ -4,34 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Chrome Extension</title>
+  <title>Memory Game</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
   <link href="https://fonts.googleapis.com/css?family=Caveat:400,700|Special+Elite" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Expletus+Sans:600,600i,700,700i" rel="stylesheet">
   
 </head>
 <body>
   <div class="container">
-
+    <section class="infoSection">
+      <h2>Memory Game</h2>
+      <hr>
+      <div id="movesCounter" class="movesCounter">moves: 0</div>
+      <div id="timeCounterBox" class="timeCounterBox">0 min 0 sec</div>
+    </section>
     <section class="boxParent" id="boxParent">
-      <div class="box"><i class="fab fa-500px"></i></div>
-      <div class="box"><i class="fas fa-bomb"></i></div>
-      <div class="box"><i class="fas fa-broom"></i></div>
-      <div class="box"><i class="fab fa-android"></i></div>
-      <div class="box"><i class="fab fa-earlybirds"></i></div>
-      <div class="box"><i class="fas fa-broom"></i></div>
-      <div class="box"><i class="fas fa-cocktail"></i></div>
-      <div class="box"><i class="fab fa-500px"></i></div>
-      <div class="box"><i class="fab fa-earlybirds"></i></div>
-      <div class="box"><i class="fas fa-bomb"></i></div>
-      <div class="box"><i class="fas fa-kiss-wink-heart"></i></div>
-      <div class="box"><i class="fab fa-android"></i></div>
-      <div class="box"><i class="fas fa-chess-king"></i></div>
-      <div class="box"><i class="fas fa-kiss-wink-heart"></i></div>
-      <div class="box"><i class="fas fa-chess-king"></i></div>
-      <div class="box"><i class="fas fa-cocktail"></i></div>
+      
     </section>
   </div>
 
