--- a/ES6/05 - Template Strings/01/index.html
+++ b/ES6/05 - Template Strings/01/index.html
@@ -7,6 +7,8 @@
     <title>Template 💌 Strings</title>
   </head>
   <body>
+    <div class="userDetails">display user details</div>
+    <div class="selectPizzaParent">select pizza</div>
     <div id="books"></div>
     <script src="./index.js"></script>
   </body>
